k8s/codelistprovider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codelistprovider
  namespace: nodc
  labels:
    role: codelistprovider
spec:
  replicas: 1
  selector:
    matchLabels:
      role: codelistprovider
  template:
    metadata:
      labels:
        role: codelistprovider
    spec:
      containers:
        - name: codelistprovider
          image: $REPOSITORY/codelistprovider:$TAG
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: oci-registry-secret
