k8s/iam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
  namespace: nodc
  labels:
    role: iam
spec:
  replicas: 1
  selector:
    matchLabels:
      role: iam
  template:
    metadata:
      labels:
        role: iam
    spec:
      containers:
        - name: iam
          image: $REPOSITORY/iam:$TAG
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: oci-registry-secret
