k8s/webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: nodc
  labels:
    role: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      role: webapi
  template:
    metadata:
      labels:
        role: webapi
    spec:
      containers:
        - name: webapi
          image: $REPOSITORY/webapi:$TAG
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: oci-registry-secret
