k8s/codelistprovider-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: codelistprovider
  namespace: nodc
spec:
  selector:
    role: codelistprovider
  ports:
    - protocol: TCP
      port: 6003
      targetPort: 80
