k8s/documentstorage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentstorage
  namespace: nodc
spec:
  selector:
    role: documentstorage
  ports:
    - protocol: TCP
      port: 6002
      targetPort: 80
