k8s/iam-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam
  namespace: nodc
spec:
  selector:
    role: iam
  ports:
    - protocol: TCP
      port: 6004
      targetPort: 80
