k8s/iamdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iamdb
  namespace: nodc
spec:
  selector:
    role: iamdb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 80
