k8s/webapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi
  namespace: nodc
spec:
  selector:
    role: webapi
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 80
